@@ -1,3 +1,8 @@
+2008-01-27 arjenmarkus@sourceforge.net
+
+   * ftnunit.f90: added init and final routines, added assertions
+   * test_ftnunit.f90: added init and final routines
+
 2008-01-26 arjenmarkus@sourceforge.net
 
    * ftnunit.f90: moved the test subroutine
